--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,11 @@
     display: block;
 }
 .link1:hover{
-    color: gray;
-}
-.link1:visited{
     color: red;
 }
+/* .link1:visited{
+    color: red;
+} */
 .link1:active{
     color: yellow;
 }
@@ -58,9 +58,31 @@
     width: 1000px;
     height: 300px;
     background-color: red;
+    position: relative;
 }
 .div2{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     background-color: purple;
+    position: absolute;
+    top: 50px;
+    left: 100px;
+}
+.stiky{
+    color: wheat;
+    background-color: black;
+    position: sticky;
+    top: 10px;
+}
+.fixsed{
+    width: 40px;
+    height: 40px;
+    background-color: green;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
 }
